--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+recap = "^0.1.1"
+serde = "^1.0.106"
