--- a/cs/commercials/commercials.csproj
+++ b/cs/commercials/commercials.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+     <Reference Include="KattisSemiring">
+       <HintPath>..\semirings\bin\Debug\netstandard2.0\semirings.dll</HintPath>
+     </Reference>
+     <Reference Include="KattisParsing">
+       <HintPath>..\parsing\bin\Debug\netstandard2.0\parsing.dll</HintPath>
+     </Reference>
+  </ItemGroup>
+
 </Project>
